@@ -88,6 +88,7 @@ Additions:
    * Add support for more than one progress status in a progressbar.
    * Add elm_table_child_get().
    * Add support for flip focus direction.
+   * Add "selected,invalid" smart callback for fileselector.
 
 Improvements:
 
